ecmascript/parser/tests/test262-error-references/fail/b48bdd4be8adc5d9.js.stderr
error: Expected an octal digit
 --> $DIR/tests/test262-parser/fail/b48bdd4be8adc5d9.js:1:3
  |
1 | 0O9
  |   ^

